syntax = "proto3";

package pb;
option go_package = "/api/user/pb";

// protoc --go_out=plugins=grpc:. api/user/pb/user.proto

service UserService{
    rpc Check(UserRequest) returns (UserResponse){}
    rpc Get(UserGetRequest) returns (UserGetResponse){}
}

message UserRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    bool result  = 1;
    int64 userID = 2;
    string err   = 3;
}

// 通过UserID获取用户
message UserGetRequest {
    int64  userID = 1;
}

// 返回用户信息
message UserGetResponse {
    bool      result    = 1;
    string    err       = 2;
    int64     userID    = 3;
    string    userName  = 4;
    string    birthday  = 5;
    int32     sex       = 6;
    string    avatar    = 7;
    string    city      = 8;
    string    district  = 9;
    string    introduction = 10;
    int32     roleID    = 11;
}